# cinnamon_rss

./: .gitignore  Dockerfile  LICENSE  README.md  cinnamon_rss.py  pyproject.toml  validate.py
.github/workflows/: fly.yml
